--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "6.3.3",
     "zone.js": "~0.8.26",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
